force-app/main/default/objects/Teams_Bot_Config__mdt/Teams_Bot_Config__mdt.object-meta.xml
<CustomObject>
    <description>Org-wide config for the Case Swarm Teams bot (Azure Bot / Teams app registration values). Expect a single record, developer name "Default".</description>
    <label>Teams Bot Config</label>
    <pluralLabel>Teams Bot Configs</pluralLabel>
</CustomObject>