force-app/main/default/objects/Teams_Bot_Config__mdt/fields/Chat_Bridge_Azure_Base_Url__c.field-meta.xml
<CustomField>
    <fullName>Chat_Bridge_Azure_Base_Url__c</fullName>
    <description>Azure Functions app base URL for the chat bridge (no trailing slash), e.g. https://my-relay.azurewebsites.net. Used when Use Azure Chat Bridge is enabled.</description>
    <label>Chat Bridge Azure Base Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>