force-app/main/default/objects/Teams_Bot_Config__mdt/fields/Chat_Bridge_HMAC_Secret__c.field-meta.xml
<CustomField>
    <fullName>Chat_Bridge_HMAC_Secret__c</fullName>
    <description>Shared secret for HMAC session tokens (must match Azure app setting CHAT_BRIDGE_HMAC_SECRET). Leave blank when using Apex Graph polling.</description>
    <label>Chat Bridge HMAC Secret</label>
    <length>255</length>
    <type>Text</type>
</CustomField>