force-app/main/default/objects/Teams_Bot_Config__mdt/fields/Delete_Teams_Chat_On_End__c.field-meta.xml
<CustomField>
    <fullName>Delete_Teams_Chat_On_End__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >When true, End Chat soft-deletes the Teams chat via Graph after the transcript is saved to Swarm_Message__c. Requires Chat.ManageDeletion.All application consent on the MS_Graph app registration; without it the delete fails with 403 and is recorded on Case.Swarm_Chat_Delete_Error__c. Set to false to leave the chat in Teams (the original End Chat behaviour).</description>
    <label>Delete Teams Chat On End</label>
    <type>Checkbox</type>
</CustomField>