force-app/main/default/objects/Teams_Bot_Config__mdt/fields/Microsoft_App_Id__c.field-meta.xml
<CustomField>
    <fullName>Microsoft_App_Id__c</fullName>
    <description>The bot's Microsoft App Id (Azure Bot registration's Application/client id). Must match the "aud" claim Bot Framework puts on every request to the messaging endpoint - see TeamsBotJwtValidator.</description>
    <label>Microsoft App Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>