force-app/main/default/objects/Teams_Bot_Config__mdt/fields/Teams_App_Catalog_Id__c.field-meta.xml
<CustomField>
    <fullName>Teams_App_Catalog_Id__c</fullName>
    <description>The id (Graph appCatalogs/teamsApps id, not the manifest's id/appId) of this bot's custom Teams app once uploaded to the org's app catalog. Used to install the app into a swarm chat via POST /chats/{id}/installedApps - see TeamsSwarmService.installBotApp.</description>
    <label>Teams App Catalog Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>