force-app/main/default/objects/Teams_Bot_Config__mdt/fields/Use_Azure_Chat_Bridge__c.field-meta.xml
<CustomField>
    <fullName>Use_Azure_Chat_Bridge__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When true, Case Swarm Chat uses the Azure Functions proxy (LWC→Azure→Graph/Bot) instead of Apex Graph polling. Set to false to revert to the original syncMessages polling path.</description>
    <label>Use Azure Chat Bridge</label>
    <type>Checkbox</type>
</CustomField>