force-app/main/default/objects/Teams_Bot_Config__mdt/fields/Use_Azure_SignalR__c.field-meta.xml
<CustomField>
    <fullName>Use_Azure_SignalR__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When true (and Use Azure Chat Bridge is also true), Case Swarm Chat uses Azure SignalR push for live inbound messages instead of continuous Azure Graph polling. Requires AzureSignalRConnectionString on the Function App.</description>
    <label>Use Azure SignalR</label>
    <type>Checkbox</type>
</CustomField>